--- a/final-pjt-front/public/index.html
+++ b/final-pjt-front/public/index.html
@@ -5,7 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <style>
+      @font-face {
+        font-family: 'LINESeedKR-Bd';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
+        font-weight: 700;
+        font-style: normal;
+    }
+
+      * {
+        font-family: 'LINESeedKR-Bd';
+      }
+
+    </style>
   </head>
   <body>
     <noscript>
