--- a/final-pjt-front/public/index.html
+++ b/final-pjt-front/public/index.html
@@ -20,6 +20,12 @@
         font-family: 'LINESeedKR-Bd';
       }
 
+      /* body,
+      html {
+        margin: 0;
+        padding: 0;
+      } */
+
     </style>
   </head>
   <body>
