--- a/final-pjt-front/public/index.html
+++ b/final-pjt-front/public/index.html
@@ -10,21 +10,20 @@
 
     <style>
       @font-face {
-        font-family: 'LINESeedKR-Bd';
-        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
-        font-weight: 700;
+        font-family: 'Tenada';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Tenada.woff2') format('woff2');
+        font-weight: normal;
         font-style: normal;
     }
 
       * {
-        font-family: 'LINESeedKR-Bd';
+        font-family: 'Tenada';
       }
 
-      /* body,
-      html {
-        margin: 0;
-        padding: 0;
-      } */
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
 
     </style>
   </head>
