--- a/final-pjt-front/public/index.html
+++ b/final-pjt-front/public/index.html
@@ -25,11 +25,10 @@
         color: inherit;
       }
 
-      /* body,
+      body,
       html {
-        margin: 0;
         padding: 0;
-      } */
+      }
 
     </style>
   </head>
